# simple-stack-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cc  run.sh  stack.ipynb  stack.py  test_stack.py
include/: simple_stack.h
src/: CMakeLists.txt  simple_stack.cpp
tests/: CMakeLists.txt  test_array_stack.cpp  test_linked_list_stack.cpp  test_simple_stack.cpp
